--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,25 @@
   "scripts": {
     "build": "babel index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "ektoplasme",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "http-server": "^0.11.1",
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-jest": "^24.9.0",
     "express": "^4.17.1"
   }
 }
