--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "gridlex": "^2.7.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "styled-components": "^4.3.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
