--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,19 @@
 {
-  "name": "docker_web_app",
+  "name": "red-server",
   "version": "1.0.0",
-  "description": "Node.js on Docker",
-  "main": "server.js",
-  "scripts": {
-    "build": "babel index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "author": "ektoplasme",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^7.0.0-0",
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "http-server": "^0.11.1",
-    "nodemon": "^1.17.5"
-  },
+  "description": "42 project made by jorobin and notraore using react to create an online tetris game",
+  "main": "app.js",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-jest": "^24.9.0",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "ejs": "^2.7.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
