--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,9 @@
     "gridlex": "^2.7.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "styled-components": "^4.3.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "socket.io-client": "^2.2.0",
+    "styled-components": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
