--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,22 @@
   "description": "42 project made by jorobin and notraore using react to create an online tetris game",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.17.1",
     "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "socket.io": "^2.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/node": "^7.6.1",
+    "@babel/preset-env": "^7.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon --exec babel-node server.js"
   },
   "author": "",
   "license": "ISC"
