serveur: deplacement des sockets dans un dossier specifique, ajout de l'evenement exit room, client: ajout de la gestion de nouvelle partie, page multi a faire, deconnexion une fois la room leaved faite

--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/styles": "^4.3.0",
     "gridlex": "^2.7.1",
+    "history": "^4.10.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.3.0"
