--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "history": "^4.10.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dots-loader": "^1.1.4",
     "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "socket.io-client": "^2.2.0",
