Multi: on a l'username, il faut communiquer au reste de la room l'arrivee d'autres players avec socket io

--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node server.js"
+    "start": "nodemon --exec babel-node server.js",
+    "debug": "DEBUG=tetris:* nodemon --exec babel-node server.js"
   },
   "author": "",
   "license": "ISC"
