--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
     "@material-ui/styles": "^4.3.0",
     "gridlex": "^2.7.1",
     "history": "^4.10.1",
