--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.0",
-    "@material-ui/styles": "^4.3.0",
     "gridlex": "^2.7.1",
     "history": "^4.10.1",
     "react": "^16.9.0",
@@ -13,7 +12,8 @@
     "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "socket.io-client": "^2.2.0",
-    "styled-components": "^4.3.0"
+    "styled-components": "^4.3.0",
+    "url-parse": "^1.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
