--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
+    "@material-ui/core": "^4.5.1",
     "gridlex": "^2.7.1",
     "history": "^4.10.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-dots-loader": "^1.1.4",
-    "react-router": "^5.0.1",
+    "react-router": "^5.1.2",
     "react-scripts": "3.0.1",
-    "socket.io-client": "^2.2.0",
-    "styled-components": "^4.3.0",
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^4.4.0",
     "url-parse": "^1.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --watchAll",
     "eject": "react-scripts eject",
     "dev": "npm start && (cd ../server && npm run start)"
   },
