--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "gridlex": "^2.7.1",
     "history": "^4.10.1",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-dots-loader": "^1.1.4",
