--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dots-loader": "^1.1.4",
     "react-router": "^5.1.2",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.4.1",
     "socket.io-client": "^2.3.0",
     "styled-components": "^4.4.0",
     "url-parse": "^1.4.7"
