Test a finaliser demain, reprendre au composant menu. Good night

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "gridlex": "^2.7.1",
     "history": "^4.10.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest-styled-components": "^6.3.4",
     "ramda": "^0.26.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -39,5 +40,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "react-test-renderer": "^16.11.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
