--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "semver": "6.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.3.0",
+    "socket.io-mock": "^1.2.3",
     "style-loader": "1.0.0",
     "styled-components": "^4.4.0",
     "terser-webpack-plugin": "1.4.1",
@@ -119,7 +120,11 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
       "!<rootDir>/node_modules/",
-      "!src/**/*serviceWorker.js"
+      "!src/**/*serviceWorker.js",
+      "!src/**/*checkFunctions.js",
+      "!src/**/*reducer.js",
+      "!src/**/*socket-functions.js",
+      "!src/**/*index.js"
     ],
     "setupFiles": [
       "react-app-polyfill/jsdom"
