--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "7.6.0",
     "@babel/preset-react": "^7.7.0",
     "@material-ui/core": "^4.7.0",
+    "@material-ui/styles": "^4.11.4",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
